test/libsolidity/syntaxTests/inlineAssembly/invalid/push_disallowed.sol
contract C {
    function f() pure public {
        assembly {
            push0()
            push1()
            push2()
            push3()
            push4()
            push5()
            push6()
            push7()
            push8()
            push9()
            push10()
            push11()
            push12()
            push13()
            push14()
            push15()
            push16()
            push17()
            push18()
            push19()
            push20()
            push21()
            push22()
            push23()
            push24()
            push25()
            push26()
            push27()
            push28()
            push29()
            push30()
            push31()
            push32()
        }
    }
}
// ----
// DeclarationError 4619: (75-80): Function not found.
// DeclarationError 4619: (95-100): Function not found.
// DeclarationError 4619: (115-120): Function not found.
// DeclarationError 4619: (135-140): Function not found.
// DeclarationError 4619: (155-160): Function not found.
// DeclarationError 4619: (175-180): Function not found.
// DeclarationError 4619: (195-200): Function not found.
// DeclarationError 4619: (215-220): Function not found.
// DeclarationError 4619: (235-240): Function not found.
// DeclarationError 4619: (255-260): Function not found.
// DeclarationError 4619: (275-281): Function not found.
// DeclarationError 4619: (296-302): Function not found.
// DeclarationError 4619: (317-323): Function not found.
// DeclarationError 4619: (338-344): Function not found.
// DeclarationError 4619: (359-365): Function not found.
// DeclarationError 4619: (380-386): Function not found.
// DeclarationError 4619: (401-407): Function not found.
// DeclarationError 4619: (422-428): Function not found.
// DeclarationError 4619: (443-449): Function not found.
// DeclarationError 4619: (464-470): Function not found.
// DeclarationError 4619: (485-491): Function not found.
// DeclarationError 4619: (506-512): Function not found.
// DeclarationError 4619: (527-533): Function not found.
// DeclarationError 4619: (548-554): Function not found.
// DeclarationError 4619: (569-575): Function not found.
// DeclarationError 4619: (590-596): Function not found.
// DeclarationError 4619: (611-617): Function not found.
// DeclarationError 4619: (632-638): Function not found.
// DeclarationError 4619: (653-659): Function not found.
// DeclarationError 4619: (674-680): Function not found.
// DeclarationError 4619: (695-701): Function not found.
// DeclarationError 4619: (716-722): Function not found.
// DeclarationError 4619: (737-743): Function not found.
